--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,6 +25,12 @@
     border-radius: 5px;
 
 }
+/* header style */
+.header{
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
 
 /* Nav styles */
 nav{
@@ -50,4 +56,23 @@ nav li a {
     text-decoration: none;
     font-size: 20px;
 
+}
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 230px;
+}
+.banner-content{
+    max-width: 584px;
+}
+.banner-greetings{
+    font-size: 45px;
+    font-weight: 600;
+}
+.banner-title{
+    font-weight: bold;
+    font-size: 85px;
+}
+.banner-profile-pic{
+    width: 584px;
 }
