--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,12 @@
 }
 
 /* shared style */
+.text-center{
+    text-align: center;
+}
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -75,4 +81,45 @@ nav li a {
 }
 .banner-profile-pic{
     width: 584px;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.font-description{
+    font-size: 35px;
+    color: #757575;
+}
+/* Main Styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+/* About Styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.name-description{
+    font-weight: 600;
+}
+.skills-container{
+    display: flex;
+    gap: 30px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
